// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> AllRecommendedVariants story renders snapshot 1`] = `
<ul
  class="grid gap-y-8"
>
  <li>
    <h2
      class="typography sizeH2 colorBase spacing2"
    >
      Primary
    </h2>
    <ul>
      <li>
        <h3
          class="typography sizeH3 colorBase spacing2"
        >
          Size Large
        </h3>
        <ul
          class="grid gap-y-4"
        >
          <li>
            <button
              class="button sizeLarge variantFlat colorBrand"
              type="button"
            >
              Button
            </button>
          </li>
          <li>
            <button
              class="button sizeLarge variantFlat colorBrand"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="arrowBackIcon svgIcon"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
                />
              </svg>
               
              Button
            </button>
          </li>
          <li
            class="mb-4"
          >
            <button
              class="button sizeLarge variantFlat colorBrand"
              type="button"
            >
              Button
              <svg
                aria-hidden="true"
                class="arrowForwardIcon svgIcon"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
                />
              </svg>
            </button>
          </li>
        </ul>
      </li>
      <li>
        <h3
          class="typography sizeH3 colorBase spacing2"
        >
          Size Medium
        </h3>
        <div
          class="mb-4"
        >
          <button
            class="button sizeMedium variantFlat colorBrand"
            type="button"
          >
            Button
          </button>
        </div>
      </li>
      <li>
        <h3
          class="typography sizeH3 colorBase spacing2"
        >
          Size Small
        </h3>
        <div
          class="mb-4"
        >
          <button
            class="button sizeSmall variantFlat colorBrand"
            type="button"
          >
            Button
          </button>
        </div>
      </li>
    </ul>
  </li>
  <li>
    <h2
      class="typography sizeH2 colorBase spacing2"
    >
      Secondary
    </h2>
    <ul>
      <li>
        <h3
          class="typography sizeH3 colorBase spacing2"
        >
          Size Large
        </h3>
        <ul
          class="grid gap-y-4"
        >
          <li>
            <button
              class="button sizeLarge variantOutline colorBrand"
              type="button"
            >
              Button
            </button>
          </li>
          <li>
            <button
              class="button sizeLarge variantOutline colorBrand"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="arrowBackIcon svgIcon"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
                />
              </svg>
               
              Button
            </button>
          </li>
          <li
            class="mb-4"
          >
            <button
              class="button sizeLarge variantOutline colorBrand"
              type="button"
            >
              Button
              <svg
                aria-hidden="true"
                class="arrowForwardIcon svgIcon"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
                />
              </svg>
            </button>
          </li>
        </ul>
      </li>
      <li>
        <h3
          class="typography sizeH3 colorBase spacing2"
        >
          Size Medium
        </h3>
        <div
          class="mb-4"
        >
          <button
            class="button sizeMedium variantOutline colorBrand"
            type="button"
          >
            Button
          </button>
        </div>
      </li>
      <li>
        <h3
          class="typography sizeH3 colorBase spacing2"
        >
          Size Small
        </h3>
        <div
          class="mb-4"
        >
          <button
            class="button sizeSmall variantOutline colorBrand"
            type="button"
          >
            Button
          </button>
        </div>
      </li>
    </ul>
  </li>
  <li>
    <h2
      class="typography sizeH2 colorBase spacing2"
    >
      Tertiary
    </h2>
    <ul>
      <li>
        <h3
          class="typography sizeH3 colorBase spacing2"
        >
          Size Large
        </h3>
        <ul
          class="grid gap-y-4"
        >
          <li>
            <button
              class="button sizeLarge variantOutline colorNeutral"
              type="button"
            >
              Button
            </button>
          </li>
          <li>
            <button
              class="button sizeLarge variantOutline colorNeutral"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="arrowBackIcon svgIcon"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
                />
              </svg>
               
              Button
            </button>
          </li>
          <li
            class="mb-4"
          >
            <button
              class="button sizeLarge variantOutline colorNeutral"
              type="button"
            >
              Button
              <svg
                aria-hidden="true"
                class="arrowForwardIcon svgIcon"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
                />
              </svg>
            </button>
          </li>
        </ul>
      </li>
      <li>
        <h3
          class="typography sizeH3 colorBase spacing2"
        >
          Size Medium
        </h3>
        <div
          class="mb-4"
        >
          <button
            class="button sizeMedium variantOutline colorNeutral"
            type="button"
          >
            Button
          </button>
        </div>
      </li>
      <li>
        <h3
          class="typography sizeH3 colorBase spacing2"
        >
          Size Small
        </h3>
        <div
          class="mb-4"
        >
          <button
            class="button sizeSmall variantOutline colorNeutral"
            type="button"
          >
            Button
          </button>
        </div>
      </li>
    </ul>
  </li>
  <li>
    <h2
      class="typography sizeH2 colorBase spacing2"
    >
      Plain
    </h2>
    <ul>
      <li>
        <h3
          class="typography sizeH3 colorBase spacing2"
        >
          Size Large
        </h3>
        <ul
          class="grid gap-y-4"
        >
          <li>
            <button
              class="button sizeLarge variantPlain colorBrand"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="arrowBackIcon svgIcon"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
                />
              </svg>
               
              Button
            </button>
          </li>
          <li>
            <button
              class="button sizeLarge variantPlain colorBrand"
              type="button"
            >
              Button
              <svg
                aria-hidden="true"
                class="arrowForwardIcon svgIcon"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
                />
              </svg>
            </button>
          </li>
          <li
            class="mb-4"
          >
            <button
              class="button sizeLarge variantPlain colorBrand"
              type="button"
            >
              <svg
                class="mx-[-0.4em] svgIcon"
                fill="currentColor"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  forward
                </title>
                <path
                  d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
                />
              </svg>
            </button>
          </li>
        </ul>
      </li>
      <li>
        <h3
          class="typography sizeH3 colorBase spacing2"
        >
          Size Medium
        </h3>
        <ul
          class="grid gap-y-4"
        >
          <li>
            <button
              class="button sizeMedium variantPlain colorBrand"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="arrowBackIcon svgIcon"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
                />
              </svg>
               
              Button
            </button>
          </li>
          <li>
            <button
              class="button sizeMedium variantPlain colorBrand"
              type="button"
            >
              Button
              <svg
                aria-hidden="true"
                class="arrowForwardIcon svgIcon"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
                />
              </svg>
            </button>
          </li>
          <li>
            <button
              class="button sizeMedium variantPlain colorBrand"
              type="button"
            >
              <svg
                class="mx-[-0.55em] svgIcon"
                fill="currentColor"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  add
                </title>
                <path
                  d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"
                />
              </svg>
            </button>
          </li>
        </ul>
      </li>
    </ul>
  </li>
  <li>
    <h2
      class="typography sizeH2 colorBase spacing2"
    >
      Link
    </h2>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <button
          class="button variantLink colorBrand"
          type="button"
        >
          Button
        </button>
      </li>
      <li>
        <button
          class="button variantLink colorBrand"
          type="button"
        >
          Button
          <svg
            class="ml-1 svgIcon"
            fill="currentColor"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              opens in a new tab
            </title>
            <path
              d="M18 19H6c-.55 0-1-.45-1-1V6c0-.55.45-1 1-1h5c.55 0 1-.45 1-1s-.45-1-1-1H5c-1.11 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-6c0-.55-.45-1-1-1s-1 .45-1 1v5c0 .55-.45 1-1 1zM14 4c0 .55.45 1 1 1h2.59l-9.13 9.13c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L19 6.41V9c0 .55.45 1 1 1s1-.45 1-1V4c0-.55-.45-1-1-1h-5c-.55 0-1 .45-1 1z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </li>
  <li>
    <h2
      class="typography sizeH2 colorBase spacing2"
    >
      Destructive
    </h2>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Large
    </h3>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <button
          class="button sizeLarge variantFlat colorAlert"
          type="button"
        >
          Button
        </button>
      </li>
      <li>
        <button
          class="button sizeLarge variantFlat colorAlert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="arrowBackIcon svgIcon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
            />
          </svg>
           
          Button
        </button>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`<Button /> Default story renders snapshot 1`] = `
<button
  class="button sizeLarge variantFlat colorBrand"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> DestructiveRecommendedVariants story renders snapshot 1`] = `
<h3
  class="typography sizeH3 colorBase spacing2"
>
  Size Large
</h3>
`;

exports[`<Button /> LinkRecommendedVariants story renders snapshot 1`] = `
<ul
  class="grid gap-y-4"
>
  <li>
    <button
      class="button variantLink colorBrand"
      type="button"
    >
      Button
    </button>
  </li>
  <li>
    <button
      class="button variantLink colorBrand"
      type="button"
    >
      Button
      <svg
        class="ml-1 svgIcon"
        fill="currentColor"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          opens in a new tab
        </title>
        <path
          d="M18 19H6c-.55 0-1-.45-1-1V6c0-.55.45-1 1-1h5c.55 0 1-.45 1-1s-.45-1-1-1H5c-1.11 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-6c0-.55-.45-1-1-1s-1 .45-1 1v5c0 .55-.45 1-1 1zM14 4c0 .55.45 1 1 1h2.59l-9.13 9.13c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L19 6.41V9c0 .55.45 1 1 1s1-.45 1-1V4c0-.55-.45-1-1-1h-5c-.55 0-1 .45-1 1z"
        />
      </svg>
    </button>
  </li>
</ul>
`;

exports[`<Button /> PlainRecommendedVariants story renders snapshot 1`] = `
<ul>
  <li>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Large
    </h3>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <button
          class="button sizeLarge variantPlain colorBrand"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="arrowBackIcon svgIcon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
            />
          </svg>
           
          Button
        </button>
      </li>
      <li>
        <button
          class="button sizeLarge variantPlain colorBrand"
          type="button"
        >
          Button
          <svg
            aria-hidden="true"
            class="arrowForwardIcon svgIcon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
            />
          </svg>
        </button>
      </li>
      <li
        class="mb-4"
      >
        <button
          class="button sizeLarge variantPlain colorBrand"
          type="button"
        >
          <svg
            class="mx-[-0.4em] svgIcon"
            fill="currentColor"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              forward
            </title>
            <path
              d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </li>
  <li>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Medium
    </h3>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <button
          class="button sizeMedium variantPlain colorBrand"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="arrowBackIcon svgIcon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
            />
          </svg>
           
          Button
        </button>
      </li>
      <li>
        <button
          class="button sizeMedium variantPlain colorBrand"
          type="button"
        >
          Button
          <svg
            aria-hidden="true"
            class="arrowForwardIcon svgIcon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          class="button sizeMedium variantPlain colorBrand"
          type="button"
        >
          <svg
            class="mx-[-0.55em] svgIcon"
            fill="currentColor"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              add
            </title>
            <path
              d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`<Button /> PrimaryRecommendedVariants story renders snapshot 1`] = `
<ul>
  <li>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Large
    </h3>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <button
          class="button sizeLarge variantFlat colorBrand"
          type="button"
        >
          Button
        </button>
      </li>
      <li>
        <button
          class="button sizeLarge variantFlat colorBrand"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="arrowBackIcon svgIcon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
            />
          </svg>
           
          Button
        </button>
      </li>
      <li
        class="mb-4"
      >
        <button
          class="button sizeLarge variantFlat colorBrand"
          type="button"
        >
          Button
          <svg
            aria-hidden="true"
            class="arrowForwardIcon svgIcon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </li>
  <li>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Medium
    </h3>
    <div
      class="mb-4"
    >
      <button
        class="button sizeMedium variantFlat colorBrand"
        type="button"
      >
        Button
      </button>
    </div>
  </li>
  <li>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Small
    </h3>
    <div
      class="mb-4"
    >
      <button
        class="button sizeSmall variantFlat colorBrand"
        type="button"
      >
        Button
      </button>
    </div>
  </li>
</ul>
`;

exports[`<Button /> SecondaryRecommendedVariants story renders snapshot 1`] = `
<ul>
  <li>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Large
    </h3>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <button
          class="button sizeLarge variantOutline colorBrand"
          type="button"
        >
          Button
        </button>
      </li>
      <li>
        <button
          class="button sizeLarge variantOutline colorBrand"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="arrowBackIcon svgIcon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
            />
          </svg>
           
          Button
        </button>
      </li>
      <li
        class="mb-4"
      >
        <button
          class="button sizeLarge variantOutline colorBrand"
          type="button"
        >
          Button
          <svg
            aria-hidden="true"
            class="arrowForwardIcon svgIcon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </li>
  <li>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Medium
    </h3>
    <div
      class="mb-4"
    >
      <button
        class="button sizeMedium variantOutline colorBrand"
        type="button"
      >
        Button
      </button>
    </div>
  </li>
  <li>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Small
    </h3>
    <div
      class="mb-4"
    >
      <button
        class="button sizeSmall variantOutline colorBrand"
        type="button"
      >
        Button
      </button>
    </div>
  </li>
</ul>
`;

exports[`<Button /> TertiaryRecommendedVariants story renders snapshot 1`] = `
<ul>
  <li>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Large
    </h3>
    <ul
      class="grid gap-y-4"
    >
      <li>
        <button
          class="button sizeLarge variantOutline colorNeutral"
          type="button"
        >
          Button
        </button>
      </li>
      <li>
        <button
          class="button sizeLarge variantOutline colorNeutral"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="arrowBackIcon svgIcon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.9959.9959 0 00-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
            />
          </svg>
           
          Button
        </button>
      </li>
      <li
        class="mb-4"
      >
        <button
          class="button sizeLarge variantOutline colorNeutral"
          type="button"
        >
          Button
          <svg
            aria-hidden="true"
            class="arrowForwardIcon svgIcon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </li>
  <li>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Medium
    </h3>
    <div
      class="mb-4"
    >
      <button
        class="button sizeMedium variantOutline colorNeutral"
        type="button"
      >
        Button
      </button>
    </div>
  </li>
  <li>
    <h3
      class="typography sizeH3 colorBase spacing2"
    >
      Size Small
    </h3>
    <div
      class="mb-4"
    >
      <button
        class="button sizeSmall variantOutline colorNeutral"
        type="button"
      >
        Button
      </button>
    </div>
  </li>
</ul>
`;

exports[`<Button /> passes class names down properly 1`] = `
<button
  class="exampleClassName button sizeLarge variantFlat colorBrand"
  data-testid="example-class-name"
  type="button"
>
  Button with example className
</button>
`;

exports[`<Button /> passes test ids down properly 1`] = `
<button
  class="button sizeLarge variantFlat colorBrand"
  data-testid="example-test-id"
  type="button"
>
  Button with data-testid
</button>
`;
